# ChemicalMotifIdentifier

./: .gitignore  README.md  setup.py
.github/workflows/: python-tests.yml
benchmark/: _frameworks.py  benchmark.py
chemicalmotifidentifier/: __init__.py
chemicalmotifidentifier/_src/: correlations.py  dataset.py  dissimilarity.py  frameworks.py  frameworks_base.py  ml.py  models.py  mplstyle  plot.py  shell_information.py  transforms.py  wc.py
chemicalmotifidentifier/experimental/: dataset.py  frameworks_base.py
examples/: _frameworks.py  benchmark.ipynb  fcc_ternary_system.ipynb
examples/_additional_packages/NshellFinder/src/NshellFinder/: concat.py
examples/_additional_packages/Polya/examples/: main.py
examples/_additional_packages/Simplex/: setup.py
examples/_additional_packages/Simplex/simplex/: __init__.py
examples/doi-10.48550-arXiv.2311.01545/: README.md  _frameworks.py  benchmark.ipynb  fcc_ternary_system.ipynb
examples/doi-10.48550-arXiv.2311.01545/_additional_packages/NshellFinder/: .gitignore  README.md
examples/doi-10.48550-arXiv.2311.01545/_additional_packages/Polya/: setup.py
examples/doi-TBD/: README.md  _frameworks.py  _frameworks_second_paper.py  bcc_quaternary_system.ipynb
examples/doi-TBD/_additional_packages/NshellFinder/: pyproject.toml
examples/doi-TBD/_additional_packages/NshellFinder/src/NshellFinder/: shell_information.py
examples/doi-TBD/_additional_packages/Polya/: README.md
examples/doi-TBD/_additional_packages/Simplex/: README.md
tests/: test_motif_id.py
(+7 files in other folders)
